--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
     "mongoose": "^8.12.2",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0"
